--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -10,6 +10,7 @@
 	margin-top: 10px;
 	margin-bottom: 15px;
 	padding: 20px;
+	opacity: 1;
 }
 
 .reviews {
@@ -19,4 +20,14 @@
 h1, h2, h3, h4, h5, h6 {
 	margin: 0;
 	padding: 0;
+}
+
+body {
+	background: image_url('crossword.png');
+	font-family: Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, "DejaVu Serif", "Bitstream Vera Serif", "Liberation Serif", Georgia, serif;
+}
+
+.navbar {
+	background: image_url('cartographer.png');
+	box-shadow: 0px 1px 3px #2a2a2a;
 }
