--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -31,3 +31,10 @@ body {
 	background: image_url('cartographer.png');
 	box-shadow: 0px 1px 3px #2a2a2a;
 }
+
+.navbar-inverse .navbar-brand {
+    color: #E9EC43;
+    font-family: 'alex_brushregular', sans-serif;
+    font-size: 30px;
+    letter-spacing: .3px;
+}
