--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,4 +1,5 @@
-<% @places.each do |place|%>
+
+<% @places.each do |place| %>
 	<div class="booyah-box col-10 offset-1">
 		<h1><%= place.name %></h1>
 		<i><%= place.address %></i>
@@ -7,3 +8,7 @@
 		<br />
 	</div>
 <% end %>
+
+<div class="offset-5 col-8 pages">
+	<%= paginate @places %>
+</div>
