--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,4 +1,5 @@
 @import "bootstrap";
+@import "font-awesome";
 
 .booyah-box {
 	-moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
@@ -30,6 +31,7 @@ body {
 .navbar {
 	background: image_url('cartographer.png');
 	box-shadow: 0px 1px 3px #2a2a2a;
+	
 }
 
 .navbar-inverse .navbar-brand {
