We added sign in out and up links to the app

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -35,7 +35,7 @@ body {
 }
 
 .navbar-inverse .navbar-brand {
-    color: #E9EC43;
+    color: rgb(233, 236, 67);
     font-family: 'alex_brushregular', sans-serif;
     font-size: 30px;
     letter-spacing: .3px;
