--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -6,6 +6,10 @@
 		<br /><br />
 		<p><%= place.description %></p>
 		<br />
+
+		<% if place.user.present? %>
+			<small><%= place.user.email %></small>
+		<% end %>
 	</div>
 <% end %>
 
