--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -41,6 +41,9 @@ body {
     letter-spacing: .3px;
 }
 
-.pages {
-
+.invalid-feedback {
+	color: #ff3333;
+  background-color: #FFEEEE;
+  border-radius: 3px;
+  padding: 2px 8px 2px 8px;
 }
