--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -4,7 +4,34 @@
   <br /><br />
   <p><%= @place.description %></p>
 
+  <% if @place.latitude.present? && @place.longitude.present? %>
+    <script>
 
+      function initMap() {
+        var myLatLng = {lat: <%= @place.latitude %>, lng: <%= @place.longitude %>};
+
+        var map = new google.maps.Map(document.getElementById('map'), {
+          zoom: 12,
+          center: myLatLng
+        });
+
+        var marker = new google.maps.Marker({
+          position: myLatLng,
+          map: map,
+          title: 'Hello World!'
+        });
+      }
+    </script>
+
+    <script async defer
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCPOa4fVdN7rvXbpFMbkw7OAztGhoggzcw&callback=initMap">
+    </script>
+
+    <div id="map"></div>
+
+  <% end %>
+
+  <br />
   
     
   <div class="float_right">
