--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -46,7 +46,9 @@
   <% @place.comments.each do |comment| %>
     <div>
       <blockquote>
-        <b><%= comment.rating %></b> - 
+        <% if comment.humanized_rating.present? %>
+          <b><%= comment.humanized_rating %></b> - 
+        <% end %>
         <br />
         <%= comment.message %>
         <br />
@@ -57,7 +59,7 @@
 
   <%= simple_form_for @comment, url: place_comments_path(@place) do |f| %>
     <%= f.input :message %>
-    <%= f.input :rating %> 
+    <%= f.input :rating, as: :select, collection: Comment::RATINGS %> 
     <%= f.submit "Add a comment", class: "btn btn-primary" %>
   <% end %>
 </div>
