--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -42,24 +42,16 @@
   </div>
 
   <div class="clear"></div>
+  <br />
+  
+  <div class="col-10 offset-1">
+    <h1 class="float_right">Comments</h1>
+    <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+      Add a comment
+    </button>
+  </div>
 
-  <% @place.comments.each do |comment| %>
-    <div>
-      <blockquote>
-        <% if comment.humanized_rating.present? %>
-          <b><%= comment.humanized_rating %></b> - 
-        <% end %>
-        <br />
-        <%= comment.message %>
-        <br />
-        <small><%= comment.user.email %></small>
-      </blockquote>
-    </div>
-  <% end %>
-
-  <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
-    Add a comment
-  </button>
+  <div class="clear"></div>
 
   <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
@@ -84,4 +76,20 @@
     </div>
   </div>
 
+  <br />
+  <div class="row">
+    <% @place.comments.each do |comment| %>
+      <div class="col-12 col-sm-6">
+        <blockquote>
+          <% if comment.humanized_rating.present? %>
+            <b><%= comment.humanized_rating %></b> - 
+          <% end %>
+          <br />
+          <%= comment.message %>
+          <br />
+          <small><%= comment.user.email %></small>
+        </blockquote>
+      </div>
+    <% end %>
+  </div>
 </div>
