--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -24,7 +24,7 @@
     </script>
 
     <script async defer
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCPOa4fVdN7rvXbpFMbkw7OAztGhoggzcw&callback=initMap">
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAgAZ1wN6vHmzy3iSXojAwnbsuWOWFjwXE&callback=initMap">
     </script>
 
     <div id="map"></div>
@@ -50,6 +50,12 @@
       Add a comment
     </button>
   </div>
+
+  <%= simple_form_for @photo, url: place_photos_path(@place) do |f| %>
+    <%= f.input :caption %>
+    <%= f.input :picture %>
+    <%= f.submit "Add photo", class: "btn btn-primary" %>
+    <% end %>
 
   <div class="clear"></div>
 
@@ -84,7 +90,6 @@
           <% if comment.humanized_rating.present? %>
             <b><%= comment.humanized_rating %></b> - 
           <% end %>
-          <br />
           <%= comment.message %>
           <br />
           <small><%= comment.user.email %></small>
@@ -92,4 +97,9 @@
       </div>
     <% end %>
   </div>
+
+  <% @place.photos.each do |photo|  %>
+    <%= photo.caption %>
+    <%= image_tag photo.picture.url, class: 'img-fluid' %>
+    <% end %>
 </div>
