--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -49,7 +49,7 @@ body {
 }
 
 #map {
-	height: 300px;
+	height: 500px;
 }
 
 .clear{
@@ -74,3 +74,22 @@ blockquote:before {
 blockquote p {
   display: inline;
 }
+
+.picture_caption {
+	font-style: italic;
+	font-family: Impact, Charcoal, sans-serif;
+	font-size: large;
+	color: rgba(163, 163, 137, .6);
+}
+
+.picture-frame {
+	background: #fff;
+	border: 5px solid #ccc;
+	border-color: #e4e4e4;
+	margin-top: 10px;
+	margin-bottom: 15px;
+	margin-left: 15px;
+	padding: 20px;
+	opacity: 1;
+}
+
