We created a notificationMailer and added its controller and geave it a function

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -75,6 +75,11 @@ blockquote p {
   display: inline;
 }
 
+.image {
+	height: 300px;
+	width: 100%;
+}
+
 .picture_caption {
 	font-style: italic;
 	font-family: Impact, Charcoal, sans-serif;
