--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -37,7 +37,7 @@
   <div class="row">
     <% @place.photos.each do |photo|  %>
       <div class="picture-frame col-5">
-        <%= image_tag photo.picture.url, class: 'img-fluid' %>
+        <%= image_tag photo.picture.url, class: 'img-fluid image' %>
         <br />
         <small class="picture_caption">-<%= photo.caption %></small>
       </div>
