--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -98,3 +98,12 @@ blockquote p {
 	opacity: 1;
 }
 
+.carousel-inner > .carousel-item > img, .carousel-inner > .carousel-item > a > img {
+	max-height: 550px;
+	width: 100%;
+	margin-bottom: 0;
+}
+
+.carousel{
+	box-shadow: 0px 3px 8px #2a2a2a;
+}
