--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -99,9 +99,11 @@ blockquote p {
 }
 
 .carousel-inner > .carousel-item > img, .carousel-inner > .carousel-item > a > img {
-	max-height: 550px;
-	width: 100%;
+	height: 550px;
+	width: 70%;
 	margin-bottom: 0;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .carousel{
