--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,8 +18,7 @@
         <%= link_to 'Nomster', root_path, class: 'navbar-brand' %>
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-          </li>
+            <%= link_to 'My Profile', user_path(current_user), class: 'nav-link' %>          </li>
           <li class="nav-item">
             <%= link_to new_place_path, class: "nav-link" do %>
               <i class="fa fa-plus-circle"></i> 
