--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,17 @@
 <h1>User Dahsboard</h1>
 
-<h1><%= @user.email %></h1>
-<h3>Member since: <%= @user.created_at.strftime("%B %d, %Y") %></h3> 
-<h4><%= @user.comments.count %> total comments</h4>
-<h4><%= @user.comments.where(rating: '5_stars').count %> total 5 star reviews</h4>
+<div class="booyah-box offset-1 col-10">
+  <div class="row">
+    <div class="col-3">
+      <%= image_tag 'user.png', class: 'profile_pic' %>
+    </div>
+
+    <div class="col-7"
+      <h1><%= @user.email %></h1>
+      <h3>Member since: <%= @user.created_at.strftime("%B %d, %Y") %></h3> 
+      <h4><%= @user.comments.count %> total comments</h4>
+      <h4><%= @user.comments.where(rating: '5_stars').count %> total 5 star reviews</h4>
+    </div>
+  </div>
+  <div class="clear"></div>
+</div>
