We added some comments to the user page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<h1>User Dahsboard</h1>
+<h1 class="text-center">User Dahsboard</h1>
 
 <div class="booyah-box offset-1 col-10">
   <div class="row">
@@ -14,4 +14,23 @@
     </div>
   </div>
   <div class="clear"></div>
+
+  <br /><br />
+  <h1 class="text-center">Comments</h1>
+  <br /><br />
+  <div class="row">
+    <% @user.comments.each do |comment| %>
+      <div class="col-12 col-sm-6">
+      <h2 class="text-center"><%= link_to comment.place.name, place_path(comment.place) %></h2>
+        <blockquote>
+          <% if comment.humanized_rating.present? %>
+            <b><%= comment.humanized_rating %></b> - 
+          <% end %>
+          <%= comment.message %>
+          <br />
+          <small><%= comment.user.email %></small>
+        </blockquote>
+      </div>
+    <% end %>
+  </div>
 </div>
