--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,4 @@
+<br />
 <h1 class="text-center">User Dahsboard</h1>
 
 <div class="booyah-box offset-1 col-10">
@@ -33,4 +34,23 @@
       </div>
     <% end %>
   </div>
+
+<div class="clear"></div>
+<br /><br />
+<h2 class="text-center">My Places</h2>
+<br /><br />
+<% @user.places.each do |place| %>
+  <div class="booyah-box col-10">
+		<h1><%= link_to place.name, place_path(place) %></h1>
+		<i><%= place.address %></i>
+		<br /><br />
+		<p><%= place.description %></p>
+		<br />
+
+		<% if place.user.present? %>
+			<small><%= place.user.email %></small>
+    <% end %>
+  </div>
+<% end %> 
+
 </div>
